For the parent container, justified content to center, introduced a gap of 30px between the container items, aligned the items centrally and set a height of 40vh. For the tabs-container, set the display to flex and also fixed a gap of 30px between the buttons.

--- a/Search Page/style.css
+++ b/Search Page/style.css
@@ -8,4 +8,13 @@
         border: 2px solid firebrick;
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        gap: 30px;
+        align-items: center;
+        height: 40vh;
     }
+
+        .tabs-container {
+            display: flex;
+            gap: 30px;
+        }
